--- a/Resume.Rmd
+++ b/Resume.Rmd
@@ -1,33 +1,45 @@
 ---
-title: "Untitled"
-author: "Christian Tillich"
-email: "christian.tillich.walker@gmail.com"
-date: "July 25, 2018"
-output: pdf_document
-header-includes: 
-- \usepackage{multicol}
-- \def\begincols{\begin{columns}}
-- \def\begincol{\begin{column}}
-- \def\endcol{\end{column}}
-- \def\endcols{\end{columns}}
+header-includes: | 
+  \cvname{Christian Tillich}
+  \cvjobtitle{Data Scientist}
+  \cvdate{} 
+  \cvaddress{Chicago, Il.}
+  \cvnumberphone{(847) 863-7162} 
+  \cvsite{https://github.com/christiantillich}
+  \cvmail{christian.tillich.walker@gmail.com} 
+  \profilepic{}
+output: 
+  pdf_document:
+    # keep_tex: TRUE
+    includes:
+      before_body: latex/prefix.tex
+geometry: 
+ - left=7.6cm 
+ - top=0.1cm 
+ - right=1cm
+ - bottom=0.2cm 
+ - nohead 
+ - nofoot
+documentclass: twentysecondcv
+classoption: letterpaper
 ---
 
-# Skills
 
 
-\begin{minipage}[t]{.45\textwidth} 
-\hfill Modeling/Math \hfill \break \break \raggedright
-Strong: Linear/Logistic Regression, GLMNet, Decision Trees, Random Forest, Gradient-Boosted Models, Clustering \break \break
-Some Exposure: Time Series, Neural Nets, Markov Models, Nonlinear Optimmization, Multivariate Statistics, Path Analysis, Other Data Mining  
-\end{minipage}
-\begin{minipage}[t]{.10\textwidth} 
-\hfill
-\end{minipage}
-\begin{minipage}[t]{.45\textwidth} 
-\hfill Programming/Tools \hfill \break \break \raggedright
-Strong: R, Markdown, Git, SQL (PostGres + Hive), Excel (+VBA)  \break \break
-Some Exposure: Bash Scripting, Python, Matlab, Mathematica, SAS, \LaTeX  
-\end{minipage}
+
+<!-- \begin{minipage}[t]{.45\textwidth}  -->
+<!-- \hfill Modeling/Math \hfill \break \break \raggedright -->
+<!-- Strong: Linear/Logistic Regression, GLMNet, Decision Trees, Random Forest, Gradient-Boosted Models, Clustering \break \break -->
+<!-- Some Exposure: Time Series, Neural Nets, Markov Models, Nonlinear Optimmization, Multivariate Statistics, Path Analysis, Other Data Mining   -->
+<!-- \end{minipage} -->
+<!-- \begin{minipage}[t]{.10\textwidth}  -->
+<!-- \hfill -->
+<!-- \end{minipage} -->
+<!-- \begin{minipage}[t]{.45\textwidth}  -->
+<!-- \hfill Programming/Tools \hfill \break \break \raggedright -->
+<!-- Strong: R, Markdown, Git, SQL (PostGres + Hive), Excel (+VBA)  \break \break -->
+<!-- Some Exposure: Bash Scripting, Python, Matlab, Mathematica, SAS, \LaTeX   -->
+<!-- \end{minipage} -->
 
 # Work Experience
 
@@ -96,3 +108,4 @@ GPA: 3.6
 * Wrote Matlab scripts to determine theoretical surface depth from excessive loading. 
 * Wrote Unix shell-scripting to ETL raw GPS data into usable Matlab objects. 
 * Presented research to peers at 2 day conference in Oregon. 
+
