--- a/latex/template.tex
+++ b/latex/template.tex
@@ -57,8 +57,8 @@
 %----------------------------------------------------------------------------------------
 
 % Skill bar section, each skill must have a value between 0 an 6 (float)
-
-\skills{$for(skills)$ $skills.name$/$skills.score$ $sep$,  $endfor$} 
+\statistics{$for(statistics)$ $statistics.name$/$statistics.score$ $sep$,  $endfor$} 
+\programming{$for(programming)$ $programming.name$/$programming.score$ $sep$,  $endfor$} 
 
 %------------------------------------------------
 
