--- a/latex/template.tex
+++ b/latex/template.tex
@@ -60,109 +60,10 @@
 \statistics{$for(statistics)$ $statistics.name$/$statistics.score$ $sep$,  $endfor$} 
 \programming{$for(programming)$ $programming.name$/$programming.score$ $sep$,  $endfor$} 
 
-%------------------------------------------------
-
-% Skill text section, each skill must have a value between 0 an 6
-%\skillstext{{lovely/4},{narcissistic/3}}
-
-%----------------------------------------------------------------------------------------
+%I'd like to find a way to make these arbitrary lists with arbitrary names, but this'll have to do for now. 
 
 \makeprofile % Print the sidebar
 
 $body$
-
-%%----------------------------------------------------------------------------------------
-%%	 INTERESTS
-%%----------------------------------------------------------------------------------------
-%
-%\section{Interests}
-%
-%The heroine and the dreamer of Wonderland; Alice is the principal character.
-
-%%----------------------------------------------------------------------------------------
-%%	 EDUCATION
-%%----------------------------------------------------------------------------------------
-%
-%\section{Education}
-%
-%\begin{twenty} % Environment for a list with descriptions
-%	\twentyitem{since 1865}{Ph.D. {\normalfont candidate in Computer Science}}{Wonderland}{\emph{A Quantified Theory of Social Cohesion.}}
-%	\twentyitem{1863-1865}{M.Sc. magna cum laude}{Wonderland}{Majoring in Computer Science}
-%	\twentyitem{1861-1863}{B.Sc. magna cum laude}{Wonderland}{Majoring in Computer Science}
-%	\twentyitem{1856-1861}{High school}{Wonderland}{Specializing in mathematics and physics.}
-%	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
-%\end{twenty}
-
-%%----------------------------------------------------------------------------------------
-%%	 PUBLICATIONS
-%%----------------------------------------------------------------------------------------
-%
-%\section{Publications}
-%
-%\begin{twentyshort} % Environment for a short list with no descriptions
-%	\twentyitemshort{1865}{Chapter One, Down the Rabbit Hole.}
-%	\twentyitemshort{1865}{Chapter Two, The Pool of Tears.}
-%	\twentyitemshort{1865}{Chapter Three,  The Caucus Race and a Long Tale.}
-%	\twentyitemshort{1865}{Chapter Four,  The Rabbit Sends a Little Bill.}
-%	\twentyitemshort{1865}{Chapter Five,  Advice from a Caterpillar.}
-%	%\twentyitemshort{<dates>}{<title/description>}
-%\end{twentyshort}
-
-%%----------------------------------------------------------------------------------------
-%%	 AWARDS
-%%----------------------------------------------------------------------------------------
-%
-%\section{Awards}
-%
-%\begin{twentyshort} % Environment for a short list with no descriptions
-%	\twentyitemshort{1987}{All-Time Best Fantasy Novel.}
-%	\twentyitemshort{1998}{All-Time Best Fantasy Novel before 1990.}
-%	%\twentyitemshort{<dates>}{<title/description>}
-%\end{twentyshort}
-
-%%----------------------------------------------------------------------------------------
-%%	 EXPERIENCE
-%%----------------------------------------------------------------------------------------
-%
-%\section{Experience}
-%
-%\begin{twenty} % Environment for a list with descriptions
-%	\twentyitem{1900}{Alice in Wonderland-The Circra (1900's) Silent Film.}{Film}{The first Alice on film was over a hundred years ago.}
-%	\twentyitem{1933}{Alice in Wonderland 1933 version.}{Film}{This film stars Ethel griffies and Charlotte Henry. It was a box office flop when it was released.}
-%	\twentyitem{1951}{Disney Film.}{Film}{Walt Disney brings Lewis Carroll's fantasy story to life in this well done animated classic. Even though many elements from the book were dropped, such as the duchess with the baby pig and mock turtle, this version is without a doubt the most famous Alice adaption made.}
-%	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
-%\end{twenty}
-
-%%----------------------------------------------------------------------------------------
-%%	 OTHER INFORMATION
-%%----------------------------------------------------------------------------------------
-%
-%\section{Other information}
-%
-%\subsection{Review}
-%
-%Alice approaches Wonderland as an anthropologist, but maintains a strong sense of noblesse oblige that comes with her class status. She has confidence in her social position, education, and the Victorian virtue of good manners. Alice has a feeling of entitlement, particularly when comparing herself to Mabel, whom she declares has a ``poky little house," and no toys. Additionally, she flaunts her limited information base with anyone who will listen and becomes increasingly obsessed with the importance of good manners as she deals with the rude creatures of Wonderland. Alice maintains a superior attitude and behaves with solicitous indulgence toward those she believes are less privileged.
-
-%%----------------------------------------------------------------------------------------
-%%	 SECOND PAGE EXAMPLE
-%%----------------------------------------------------------------------------------------
-%
-%\newpage % Start a new page
-%
-%\makeprofile % Print the sidebar
-%
-%\section{Other information}
-%
-%\subsection{Review}
-%
-%Alice approaches Wonderland as an anthropologist, but maintains a strong sense of noblesse oblige that comes with her class status. She has confidence in her social position, education, and the Victorian virtue of good manners. Alice has a feeling of entitlement, particularly when comparing herself to Mabel, whom she declares has a ``poky little house," and no toys. Additionally, she flaunts her limited information base with anyone who will listen and becomes increasingly obsessed with the importance of good manners as she deals with the rude creatures of Wonderland. Alice maintains a superior attitude and behaves with solicitous indulgence toward those she believes are less privileged.
-%
-%\section{Other information}
-%
-%\subsection{Review}
-%
-%Alice approaches Wonderland as an anthropologist, but maintains a strong sense of noblesse oblige that comes with her class status. She has confidence in her social position, education`, and the Victorian virtue of good manners. Alice has a feeling of entitlement, particularly when comparing herself to Mabel, whom she declares has a ``poky little house," and no toys. Additionally, she flaunts her limited information base with anyone who will listen and becomes increasingly obsessed with the importance of good manners as she deals with the rude creatures of Wonderland. Alice maintains a superior attitude and behaves with solicitous indulgence toward those she believes are less privileged.
-%
-%%----------------------------------------------------------------------------------------
 
 \end{document} 
