--- a/latex/template.tex
+++ b/latex/template.tex
@@ -25,6 +25,19 @@
 \documentclass[letterpaper]{twentysecondcv} % a4paper for A4
 \def\tightlist{} %An odd pandoc internal that we need to include for consistency
 
+% \usepackage{xcolor}
+% \definecolor{white}{RGB}{255,255,255}
+% \definecolor{gray}{HTML}{4D4D4D}
+% \definecolor{sidecolor}{HTML}{e3f2fc}
+% \definecolor{mainblue}{HTML}{0E5484}
+% \definecolor{maingray}{HTML}{B9B9B9}
+% \definecolor{lightblue}{HTML}{e3f2fc}
+
+\RequirePackage{sectsty}
+\sectionfont{\LARGE\sffamily\color{mainblue}\sectionrule{0ex}{0pt}{-1.25ex}{1pt}}
+\subsectionfont{\large\vspace{5pt}\sffamily\color{gray}\centering}
+\setcounter{secnumdepth}{0} %turns off section numbering
+
 
 %----------------------------------------------------------------------------------------
 %	 PERSONAL INFORMATION
